demos/service-demo/ingress-examples/ingress-path-host-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-path-ingress
  namespace: default
spec:
  rules:
    - host: example.com
      http:
        paths:
          #Path based routing
          - path: /app1
            pathType: Prefix
            backend:
            service:
              name: app1-service
              port:
              number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
